--- a/home.css
+++ b/home.css
@@ -48,7 +48,7 @@ body, html {
   background-position: center;
   border: none;
   border-radius: 18px;
-  color: white;
+  color: black;
   font-size: 1.3rem;
   font-weight: bold;
   text-decoration: none;
@@ -73,4 +73,5 @@ body, html {
     height: 100px;
     font-size: 1.1rem;
   }
+
 }
